--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "template-rust-app"
+name = "entry-gateway"
 version = "0.0.1"
 edition = "2021"
 
@@ -21,3 +21,11 @@ slab = "0.4"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 envy = "0.4.2"
+
+tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "net"]}
+hyper = { version = "1.2.0", features = ["full"]}
+tower = "0.4.13"
+hyper-util = { version = "0.1.3", features = ["full"]}
+axum = { version = "0.7.4", features = ["http2", "macros", "multipart", "ws", "tokio"] }
+axum-server = { version = "0.6", features = ["tls-rustls"] }
+axum-client-ip = "0.5.1"
